adding the show_type in the different files
